--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.1.7
   flutter_svg: ^1.1.6
+  firebase_core: ^2.3.0
+  firebase_database: ^10.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
